Sidebar spacing fix
Just bugs me that my tabs are highlighted ill much
rather have no highlights on my tabs before I close
them out helps me sleep better at night too. I rel-
ate it too ending the hoop session on a made basket

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -39,7 +39,7 @@ body{
 #malcolm {
   display: flex;
   flex-direction: column;
-  height: 250px;
+  height: 500px;
   justify-content: space-between;
   flex-shrink: 0;
 }
